<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChallengeApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="title_activity_create_challenge">CreateChallengeActivity</string>
    <string name="feed_page">Challenge Wall</string>
    <string name="profile">My Profile</string>
    <string name="selectFriend">Challenge Friends</string>
    <string name="user_name">User name temp</string>
    <string name="challenge_comp">Challenges Completed</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="challenge_description">Challenge Description</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="playing">Now Playing:</string>
    <string name="initial_Time">0 min, 0 sec</string>
    <string name="app_id">357533927741523</string>
    <string name="exception">Exception: %1$s</string>
    <string name="ok_button">OK</string>
    <string name="need_perms_alert_text">In order to pick your friends you need to accept all the permissions on the following page.</string>
    <string name="need_perms_alert_button_ok">OK</string>
    <string name="need_perms_alert_button_quit">Quit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_mod_name">Name</string>
    <string name="profile_mod_email">Email</string>
    <string name="profile_mod_address">Address</string>
    <string name="profile_mod_ok">OK</string>
    <string name="profile_mod">Update profile</string>
    <string name="profile_mod_title">Update your profile</string>
    <string name="title_activity_video_capture">VideoCapture</string>
    <string name="title_activity_take_picture">TakePicture</string>
    <string name="upload_file">Upload Challenge File</string>
    <string name="to_do_challenges">To Do Challenges</string>
    <string name="title_activity_to_do_challenges">ToDoChallengeActivity</string>

    <!-- upload file Strings -->
    <string name="upload_video">Upload Challenge Video</string>
    <string name="upload_audio">Upload Challenge Audio</string>
    <string name="upload_image">Upload Challenge Image</string>

    <!-- locaation properties -->
    <string name="selectLocation">Select Challenge Location</string>
    <string name="title_activity_test">testActivity</string>

</resources>
