<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >

<!--    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:onClick="forward"
        android:src="@android:drawable/ic_media_ff" />-->

<!--    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/imageButton2"
        android:onClick="rewind"
        android:src="@android:drawable/ic_media_rew" />-->
     <TextView
         android:id="@+id/tv_challenge_name"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/activity_profile_challenge_comp"
         android:layout_marginTop="14dp"
         android:text="@string/challenge_title"/>
    <TextView
        android:id="@+id/tv_challenge_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_challenge_name"/>
    <TextView
        android:id="@+id/tv_challenge_description"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_profile_challenge_comp"
        android:layout_below="@id/tv_challenge_name"
        android:text="@string/challenge_description"/>
    <TextView
        android:id="@+id/tv_challenge_description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_challenge_description"/>
    <VideoView android:id="@+id/videoView"
               android:layout_height="fill_parent"
               android:layout_width="fill_parent"
               android:layout_above="@+id/seekBar1"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/imageButton1"

        android:onClick="pause"
        android:src="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:onClick="play"
        android:src="@android:drawable/ic_media_play" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/imageButton1"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:text="@string/initial_Time"
        android:layout_above="@id/imageButton1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<!--
    TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:text="@string/playing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textV"
        android:text="TextView" />
-->

</RelativeLayout>